force-app/main/default/objects/Account/fields/TS_Anzahl_Mitarbeiter__c.field-meta.xml
<CustomField>
    <fullName>TS_Anzahl_Mitarbeiter__c</fullName>
    <label>TS-Anzahl-Mitarbeiter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>