force-app/main/default/objects/Account/fields/TS_Branche__c.field-meta.xml
<CustomField>
    <fullName>TS_Branche__c</fullName>
    <label>TS-Branche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Ernährung</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Versicherung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>