force-app/main/default/objects/Account/fields/TS_Check__c.field-meta.xml
<CustomField>
    <fullName>TS_Check__c</fullName>
    <label>TS-Check</label>
    <length>5</length>
    <type>Text</type>
</CustomField>